--- a/docs/mip.tex
+++ b/docs/mip.tex
@@ -4,41 +4,8 @@
 \usepackage{amsmath, amssymb}
 \usepackage{graphicx}
 
-\title{Project 5 \\
-	Taxi vận chuyển người kết hợp hàng hóa}
-\author{Trần Huy Hùng \and Đỗ Ngọc Sơn}
-
 \begin{document}
-	\maketitle
-		
-	\section{Bài toán}
-	\begin{enumerate}
-		\item Cho tập các điểm:
-		\begin{itemize}
-			\item Điểm xuất phát $0$ của tất cả các xe taxi
-			\item $N$ hành khách, hành khách $i$ có điểm đón $i$ và điểm trả $i+N+M$ ($i=1,2,...,N$)
-			\item $M$ gói hàng, gói hàng $j$ ($j=N+1,N+2,...,N+M$) có:
-			\begin{itemize}
-				\item Điểm lấy hàng $j$ và điểm giao hàng $j+N+M$ 
-				\item Khối lượng $q_j$
-			\end{itemize}
-			\item $d(i,j)$: Khoảng cách từ điểm $i$ đến điểm $j$ ($i,j\in \{0,1,...,2N+2M\}$)
-		\end{itemize}
-		\item Có $K$ xe taxi cần lập lộ trình đi từ điểm $0$, xử lý yêu cầu chuyển hành khách hoặc các gói hàng, và quay về $0$:
-		\begin{itemize}
-			\item Xe thứ $k$ có thể chở cùng lúc 1 hành khách và tối đa $Q_k$ khối lượng hàng ($k=1,2,...,K$)
-			\item Xe đã đón khách thì phải đi thẳng đến điểm trả, không được dừng lại lấy hay giao hàng
-		\end{itemize}
-		\item Yêu cầu: Lập lộ trình di chuyển ngắn nhất cho các xe
-	\end{enumerate}
-	\begin{figure}
-		\centering
-		\caption{Lộ trình đón trả người kết hợp hàng hóa}
-		\includegraphics[width=\textwidth]{taxi.png}
-	\end{figure}
-
-	\section{Mô hình ràng buộc}
-	\subsection{Tham số}
+	\section{Tham số}
 	\begin{itemize}
 		\item Tập $2N+2M+K$ điểm:
 		\begin{itemize}
@@ -85,7 +52,7 @@
 			\end{itemize}
 		\end{itemize}
 	
-	\subsection{Ràng buộc}
+	\section{Ràng buộc}
 	\begin{itemize}
 		\item Ràng buộc cân bằng luồng vào ra:
 		\begin{align}
@@ -95,20 +62,20 @@
 		\item Xác định $r_i$:
 		\begin{align}
 			r_{2N+2M+k} = k,\quad & k=1,2,...,K \\
-			x_{ij}=1\Rightarrow r_j=r_i,\quad & i=1,2,...,2N+2M+K \\
-											& j=1,2,...,2N+2M+K \notag
+			r_j - r_i\leq \mu\times (1 - x_{ij}),\quad & i=1,2,...,2N+2M+K \\
+			r_j - r_i\geq -\mu\times (1 -x_{ij}),\quad & j=1,2,...,2N+2M+K \notag
 		\end{align}
 		\item Xác định $t_i$:
 		\begin{align}
 			t_{2N+2M+k} = 0,\quad & k=1,2,...,K \\
-			x_{ij}=1\Rightarrow t_j=t_i + 1,\quad & i=1,2,...,2N+2M+K \\
-											& j=1,2,...,2N+2M \notag
+			t_j - t_i -1\leq \mu\times (1 - )x_{ij}),\quad & i=1,2,...,2N+2M+K \\
+			t_j - t_i -1\geq -\mu\times (1 - x_{ij}),\quad & j=1,2,...,2N+2M \notag
 		\end{align}
 		\item Xác định $c_i$:
 		\begin{align}
 			c_{2N+2M+k} = Q_k,\quad & k=1,2,...,K \\
-			x_{ij}=1\Rightarrow c_j=c_i - w_j,\quad & i=1,2,...,2N+2M+K \\
-											& j=1,2,...,2N+2M \notag
+			c_j - c_i - w_j\leq \mu\times (1 - x_{ij}),\quad & i=1,2,...,2N+2M+K \\
+			c_j - c_i - w_j\geq -\mu\times (1 - x_{ij}),\quad & j=1,2,...,2N+2M \notag
 		\end{align}
 		\item Điểm đón và trả của hành khách $i$ phải thuộc lộ trình của cùng một xe, tương tự với các gói hàng:
 		\begin{align}
@@ -120,12 +87,26 @@
 		\end{align}
 		\item Điểm lấy hàng phải ở trước điểm giao hàng:
 		\begin{align}
-			t_i < t_{i+N+M},\quad & i=N+1,N+2,...,N+M
+			t_i + 1\leq t_{i+N+M},\quad & i=N+1,N+2,...,N+M
 		\end{align}
 		\item Khối lượng còn lại của xe tại mọi thời điểm không âm (đã thỏa mãn).
 	\end{itemize}
 
-	\subsection{Hàm mục tiêu}
+	\section{Ràng buộc thừa}
+	\begin{itemize}
+		\item Các điểm logic tham chiếu đến $0$ không nối lẫn nhau:
+		\begin{align}
+			x_{ij}=0,\quad & i=2N+2M+1,...,2N+2M+K \\
+							& j=2N+2M+1,...,2N+2M+K \notag \\
+							& i\ne j \notag
+		\end{align}
+		\item Một điểm không tự nối tới chính nó:
+		\begin{align}
+			x_{ii}=0,\quad & i=1,2,...,2N+2M
+		\end{align}
+	\end{itemize}
+
+	\section{Hàm mục tiêu}
 	\begin{equation}
 		\sum_{i=1}^{2N+2M+K} \sum_{j=1}^{2N+2M+K} d_{ij}\times x_{ij} \leftarrow min
 	\end{equation}
