--- a/representation/template_Beamer.tex
+++ b/representation/template_Beamer.tex
@@ -84,7 +84,8 @@
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
 
-\title[Short title]{Taxi vận chuyển người kết hợp hàng hóa} % The short title appears at the bottom of every slide, the full title is only on the title page
+\title[Project 5]{Project 5 \\
+	Taxi vận chuyển người kết hợp hàng hóa} % The short title appears at the bottom of every slide, the full title is only on the title page
 
 \author{Trần Huy Hùng,\\ Đỗ Ngọc Sơn} % Your name
 \institute[UCLA] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
